<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我爱漫画</string>
    <string name="recommend">漫推荐</string>
    <string name="serialize">漫更新</string>
    <string name="update">漫商城</string>
    <string name="game">漫游戏</string>
    <string name="load">载入中…</string>
    <string name="comic_00">漫画</string>
    <string name="keep_00">注册</string>
    <string name="keep_01">登录</string>
    <string name="keep_02">请输入帐号</string>
    <string name="keep_03">请输入密码</string>
    <string name="keep_04">请确认密码</string>
    <string name="type_00">分类</string>
    <string name="type_01">漫画名称</string>
    <string name="about_00">关于我爱漫画</string>
    <string name="about_01">北京赏文天下科技有限公司</string>
    <string name="about_02">版本：1.0</string>
    <string name="about_03">论坛：http://bbs.k76.com</string>
    <string name="about_04">微博：http://e.weibo.com/manhuabox520</string>
    <string name="about_05">邮箱：kefu@ishangwen.com</string>
    <string name="about_06">客服：4000267678</string>
    <string name="about_07">BUG反馈</string>
    <string name="about_08">邮箱：417420081@qq.com</string>
    <string name="about_09">__qq：417420081</string>
    <string name="about_10">技术：吕庆佳</string>
    <string name="works_00">类型</string>
    <string name="works_01">奇幻城</string>
    <string name="works_02">蜜糖屋</string>
    <string name="works_03">灵异堡</string>
    <string name="works_04">怪咖厅</string>
    <string name="works_05">耽美阁</string>
    <string name="theme_00">题材</string>
    <string name="theme_01">仙侠</string>
    <string name="theme_02">修真</string>
    <string name="theme_03">异界</string>
    <string name="theme_04">魔幻</string>
    <string name="theme_05">竞技</string>
    <string name="theme_06">武侠</string>
    <string name="theme_07">后宫</string>
    <string name="theme_08">穿越</string>
    <string name="theme_09">妖精</string>
    <string name="theme_10">萌宠</string>
    <string name="theme_11">浪漫</string>
    <string name="theme_12">校园</string>
    <string name="theme_13">惊悚</string>
    <string name="theme_14">恐怖</string>
    <string name="theme_15">悬疑</string>
    <string name="theme_16">推理</string>
    <string name="theme_17">丧尸</string>
    <string name="theme_18">巫灵</string>
    <string name="theme_19">爆笑</string>
    <string name="theme_20">搞怪</string>
    <string name="theme_21">麻辣</string>
    <string name="theme_22">囧事</string>
    <string name="theme_23">无厘</string>
    <string name="theme_24">怪咖</string>
    <string name="theme_25">耽美</string>
    <string name="theme_26">百合</string>
    <string name="items_00">详情</string>
    <string name="items_01">KM大海报Ver.2</string>
    <string name="items_02">价格:2元</string>
    <string name="items_03">购买</string>
    <string name="views_00">返回</string>
    <string name="chapt_00">开始阅读</string>
    <string name="chapt_01">加入收藏</string>
    
</resources>
