<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="40.0dip" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:background="@drawable/sj_01"
            android:scaleType="centerCrop" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2.0"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/sj_10"
                android:scaleType="centerCrop"
                android:gravity="center"
                android:contentDescription="@string/app_name" />
            
            <TextView
                android:id="@+id/text1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="left|center"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="16.0dip" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/sj_02" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2.0"
                android:gravity="center"
                android:text="@string/keep_00"
                android:textColor="#000000"
                android:textSize="16.0dip" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/sj_02" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2.0"
                android:gravity="center"
                android:text="@string/keep_01"
                android:textColor="#000000"
                android:textSize="16.0dip" />
        </LinearLayout>

        <ImageView
            android:id="@+id/cursor"
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:layout_gravity="bottom|right"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/sj_03" />
    </FrameLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</LinearLayout>